<resources>
    <string name="app_name">ResQPet</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>

    <array name="pettype">
        <item>Dogs</item>
        <item>cats</item>
    </array>
    <array name="petgender">
        <item>Pet gender</item>
        <item>Male</item>
        <item>Female</item>
    </array>
    <array name="ageRange">
        <item>0-3</item>
        <item>4-6</item>
        <item>7-9</item>
        <item>10 and above</item>
    </array>
    <array name="Dogbreed">
        <item>Labrador</item>
        <item>pitbull</item>
        <item>german shepard</item>
    </array>
    <array name="catBreed">
        <item>Feline</item>
        <item>cat breed2</item>
    </array>
    <array name="catbreed">
        <item>Breed</item>
        <item>Unknown</item>
        <item>Abyssinian</item>
        <item>American Curl</item>
        <item>American Bobtail</item>
        <item>American Shorthair</item>
        <item>American Wirehair</item>
        <item>Applehead Siamese</item>
        <item>Balinese</item>
        <item>Birman</item>
        <item>Bombay</item>
        <item>British Shorthair</item>
        <item>Burmese</item>
        <item>Burmilla</item>
        <item>Calico</item>
        <item>Canadian Hairless</item>
        <item>Chartreux</item>
        <item>Chausie</item>
        <item>Chinchilla</item>
        <item>Cornish Rex</item>
        <item>Cymric</item>
        <item>Devon Rex</item>
        <item>Dilute Calico</item>
        <item>Dilute Tortoiseshell</item>
        <item>Domestic Long Hair</item>
        <item>Domestic Medium Hair</item>
        <item>Domestic Short Hair</item>
        <item>Egyptian Mau</item>
        <item>Exotic Short Hair</item>
        <item>Domestic Long Hair</item>
        <item>Domestic Medium Hair</item>
        <item>Domestic Short Hair</item>
        <item>Egyptian Mau</item>
        <item>Havana</item>
        <item>Himalayan</item>
        <item>Japanese Bobtail</item>
        <item>Javanese</item>
        <item>Korat</item>
        <item>LaPerm</item>
        <item>Maine Coon</item>
        <item>Manx</item>
        <item>Munchkin</item>
        <item>Nebelung</item>
        <item>Norwegian Forest Cat</item>
        <item>Ocicat</item>
        <item>Oriental Long Hair</item>
        <item>Oriental Short Hair</item>
        <item>Oriental Tabby</item>
        <item>Persian</item>
        <item>Pixiebob</item>
        <item>Ragamuffin</item>
        <item>Ragdoll</item>
        <item>Russian Blue</item>
        <item>Scottish Fold</item>
        <item>Selkirk Rex</item>
        <item>Siamese</item>
        <item>Siberian</item>
        <item>Silver</item>
        <item>Singapura</item>
        <item>Snowshoe</item>
        <item>Somali</item>
        <item>Sphynx/Hairless Cat</item>
        <item>Tabby</item>
        <item>Tonkinese</item>
        <item>Torbie</item>
        <item>Tortoiseshell</item>
        <item>Turkish Angora</item>
        <item>Turkish Van</item>
        <item>Tuxedo</item>
        <item>York Chocolate</item>
    </array>


</resources>
