<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical">



    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/profile" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="70dp"
            android:paddingTop="100dp" >

            <TextView
                android:id="@+id/Intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome to ResQpet"
                android:textSize="32dp"/>
        </LinearLayout>


    </LinearLayout>

    <EditText
        android:id="@+id/old_email"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_marginBottom="15dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="82dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="125dp"
        android:layout_above="@+id/newPassword"
        android:layout_toEndOf="@+id/progressBar" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:hint="@string/new_pass"
        android:imeActionId="@+id/login"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="168dp"
        android:layout_above="@+id/changePass"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/changePass"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_change"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteY="211dp"
        tools:layout_editor_absoluteX="199dp"
        android:layout_above="@+id/remove"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/remove"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/change_password_button"
        android:layout_alignStart="@+id/changePass"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="0dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_remove"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="199dp"
        tools:layout_editor_absoluteY="259dp" />

    <Button
        android:id="@+id/change_password_button"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="312dp"
        android:layout_above="@+id/remove_user_button"
        android:layout_alignStart="@+id/remove_user_button" />

    <Button
        android:id="@+id/remove_user_button"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/remove_user"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="408dp"
        android:layout_above="@+id/sign_out"
        android:layout_alignStart="@+id/sign_out" />

    <Button
        android:id="@+id/sign_out"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/btn_sign_out"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="456dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/useremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/old_email"
        android:layout_marginBottom="54dp"
        android:gravity="center"
        android:hint="@string/email_id"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

</RelativeLayout>